--- a/src/styles.css
+++ b/src/styles.css
@@ -18,6 +18,7 @@
     justify-content: flex-start;
     align-items: center;
     padding-top: 200px;
+    border: 1px solid black;
 }
 button{
     padding: 5px 20px;
@@ -25,3 +26,29 @@ button{
     background-color: transparent;
 }
 
+.main{
+    padding: 50px;
+    border: 1px solid black;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: repeat(5,1fr);
+    grid-auto-rows: 1fr;
+    gap: 10px;
+}
+
+.grid-element{
+    border: 1px solid black;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.add-button{
+    display: block;
+    border-radius: 20px;
+    font-weight: bold;
+    width: 90%;
+    height: 90%;
+    font-size:5vh;
+}
