--- a/src/styles.css
+++ b/src/styles.css
@@ -52,3 +52,14 @@ button{
     height: 90%;
     font-size:5vh;
 }
+
+/* testing */
+#tasks:hover{
+    font-size:large;
+    font-weight:bold;
+}
+
+#projects:hover{
+    font-size:large;
+    font-weight:bold;
+}
