--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,121 @@
-*{
+*:not(dialog){
     margin: 0;
     padding: 0;
+    border: 0;
     box-sizing: border-box;
+}
+li{
+    list-style: none;
+    padding:5px;
+}
+li:not(.priority){
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    padding:5px;
+}
+::backdrop {
+    background-image: linear-gradient(
+      40deg,
+      rgb(187, 45, 2),
+      rgb(117, 119, 0),
+      rgb(0, 0, 0)
+    );
+    opacity: 0.9;
+}
+dialog{   
+    height:65%;
+    width: 400px;
+    padding: 0px;
+    border-radius: 10px;
+    border: 2px solid grey; 
+}
+.task-close-dialog, .project-close-dialog{
+    width: 100%;
+    background-color: red;  
+    padding: 10px;
+    font-size: large;
+    color:white ;
+    border:none;
+}
+.task-close-dialog:hover, .project-close-dialog:hover{
+    background-color:rgb(165, 0, 0);
+}
+.task-close-dialog:active, .project-close-dialog:active{
+    color: black;
+}
+.task-confirm-dialog, .project-confirm-dialog{
+    width: 100%;
+    background-color: rgb(32, 160, 1);  
+    padding: 10px;
+    margin-top:20px;
+    font-size: large;
+    color:white ;
+    border:none;
+}
+.task-confirm-dialog:active, .project-confirm-dialog:active{
+    color: black;
+}
+.task-confirm-dialog:hover, .project-confirm-dialog:hover{
+    background-color:rgb(1, 78, 5);
+}
+.task-dialog-container, .project-dialog-container{
+    height:100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;    
+}
+.task-form-container, .project-form-container{
+    width: 100%;
+    height: 100%;
+    padding: 20px 0 0 20px;
+    flex:1;
+    display:flex;
+    align-items: center;
+    font-size: 3vh;
+}
+form{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+form ul{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+form ul li{
+    flex: 1;
+}
+input{
+    border-radius: 3px;
+    padding-left:5px;
+    border: #E5E7EB 1px;
+    background-color: rgb(247, 247, 247);
+    font-size: 3vh;
+}
+textarea{
+    border-radius: 3px;
+    padding-left:5px;
+    border: #E5E7EB 1px;
+    background-color: rgb(247, 247, 247);
+    font-size: 3vh;
+}
+textarea:invalid{
+    background-color: rgb(245, 205, 205);
+}
+select{
+    font-size: 3vh;
+    text-align: center;
+    width: auto;
+    border-radius: 3px;
+    border: #E5E7EB 1px;
+    background-color: rgb(247, 247, 247);
+}
+input:invalid{
+    background-color: rgb(245, 205, 205);
 }
 .body{
     height:100vh;
@@ -10,25 +124,38 @@
     display: grid;
     height: 100vh;
     grid-template-columns: 250px 4fr;
+    grid-template-rows: 80px 1fr;
 }
 .dashboard{
+    grid-column: 1/2;
+    grid-row: 1/3;
     display: flex;
     flex-direction: column;
     gap:50px;
     justify-content: flex-start;
     align-items: center;
     padding-top: 200px;
-    border: 1px solid black;
+    border-right: 1px solid black;
 }
 button{
     padding: 5px 20px;
     border: none;
     background-color: transparent;
 }
-
+#header{
+    grid-column: 2/3;
+    grid-row: 1/2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: x-large;
+}
 .main{
+    grid-column: 2/3;
+    grid-row: 2/3;
     padding: 50px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     display: grid;
     grid-template-columns: repeat(3,1fr);
     grid-template-rows: repeat(5,1fr);
