--- a/src/styles.css
+++ b/src/styles.css
@@ -143,13 +143,31 @@ button{
     background-color: transparent;
 }
 #header{
+    margin-top: 10px;
     grid-column: 2/3;
     grid-row: 1/2;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    /* display: flex; */
+    /* justify-content: center;
+    align-items: center; */
     text-align: center;
     font-size: x-large;
+}
+.header-div{
+    display: flex;
+    align-items: center;
+}
+.header-title{
+    flex:1;
+}
+.header-back{
+    margin-left: 30px;
+    font-size: 6vh;
+    padding: 5px;
+    border-radius: 50%;
+    text-align: center;
+}
+.header-back:hover{
+    color: lightskyblue;
 }
 .main{
     grid-column: 2/3;
@@ -157,27 +175,123 @@ button{
     padding: 50px;
     /* border: 1px solid black; */
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(5,1fr);
     grid-template-rows: repeat(5,1fr);
     grid-auto-rows: 1fr;
     gap: 10px;
 }
 
 .grid-element{
+    padding: 10px 5px;
     border: 1px solid black;
     border-radius: 20px;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    justify-content:space-between;
+    text-align: center;
+    flex-direction: column;
+    gap:10px;
 }
+.task-footer{
+    padding: 0 5px;
+    display: flex;
+    font-size: large;
+    justify-content: space-between;
+    align-items: center;
+}
+.task-header, .project-header{
+    padding: 0 5px;
+    word-wrap: break-word;
+    word-break: break-word; 
+    display: flex;
+    font-size: large;
+    justify-content: space-around;
+    align-items: center;
+}
+.middle-buttons{
+    width: 100%;
+    display: flex;
+    gap:10px;
 
+}
+.delete-task,.delete-project{
+    flex:1;
+    font-size: 2vh;
+    padding: 2px;
+    font-weight: bold;
+    border:none;
+    border-radius: 10px;
+    background-color: rgb(184, 37, 37);
+    color:white;
+}
+.delete-task:hover,.delete-project:hover{
+    border: 1px solid black;
+    color: black;
+}
+.descriptionTask, .descriptionProject{
+    font-size: 1.8vh;
+    padding: 5px 0;
+}
+.edit-task{
+    padding: 2px 20px;
+    font-size: 2vh;
+    border:none;
+    font-weight: bold;
+    border-radius: 10px;
+    background-color: rgb(77, 72, 72);
+    color:white;
+}
+.edit-task:hover{
+    border: 1px solid black;
+    color: black;
+}
+.task-details,.project-details{
+    padding: 0;
+    margin: 0;
+    font-size: xx-large;
+    cursor: pointer;
+}
+.project-header{
+    font-size: xx-large;
+    flex:1;
+    cursor:pointer;
+}
+.project-header:hover{
+    color:lightskyblue;
+    font-size: xx-large;
+}
+.project-details{
+    padding-right:  0;
+    padding-left: 80%;
+}
+.complete-task{
+    padding:10px;
+    font-size: xx;
+    margin:0;
+    cursor: pointer;
+    border: 2px solid black;
+    border-radius: 12px;
+}
+.black{
+    background-color: black;
+}
+.complete-task:hover{
+    border-color: rgb(81, 172, 202);
+}
+.task-details:hover{
+    color:#E5E7EB;
+}
 .add-button{
     display: block;
     border-radius: 20px;
+    width: 105%;
+    height:150%;
     font-weight: bold;
-    width: 90%;
-    height: 90%;
     font-size:5vh;
+    cursor: pointer;
+}
+.add-button:hover{
+    font-size: 6vh;
+    font-weight: bolder;
 }
 
 /* testing */
