--- a/src/styles.css
+++ b/src/styles.css
@@ -168,7 +168,7 @@ button{
     display: grid;
     grid-template-columns: repeat(auto-fill,minmax(200px,1fr));
     grid-template-rows: repeat(4,minmax(100px,1fr));
-    grid-auto-rows: 1fr;
+    grid-auto-rows: 100px;
     gap: 10px;
 }
 
@@ -248,7 +248,7 @@ button{
 }
 .project-header{
     margin-top:50px;
-    font-size:6vh;
+    font-size:5vh;
     flex:1;
     cursor:pointer;
 }
